--- a/docs/后台接口文档.md
+++ b/docs/后台接口文档.md
@@ -54,7 +54,7 @@ error|操作失败
 ```javascript
 //success
 {"success":true}
-//error 同上个接口
+//error 1000 用户名错误  1001 密码错误
 ```
 
 ### employee-logout
@@ -328,7 +328,7 @@ error|操作失败
 + 接口地址
   /category/addSecondCategory
 + 请求方式
-  POST  enctype="multipart/form-data"
+  POST 
 + 参数说明
 参数名称|是否必须|说明
 --|--|--
@@ -356,7 +356,7 @@ error|操作失败
 + 参数说明
 参数名称|是否必须|说明
 --|--|--
-brandLogo图片
+pic1 图片
 + 返回说明
 参数|说明
 --|--
